очистка критериев поиска, лог аутентификации (сервер) ограничение числа смс проверка наличия моб.телефона у пользователя

--- a/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
@@ -99,7 +99,11 @@ body{
 }
 
 .bt_command{
-        width: 100% !important;
+     width: 100% !important;
+}
+
+.btnClear{
+    font-size: 90%;
 }
 
 .droppoint{
