--- a/escom-bpm-web/src/main/webapp/view/templ/tree/tree-toolbar.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/tree/tree-toolbar.xhtml
@@ -7,7 +7,7 @@
     <p:defaultCommand target="#{_frmTree}:accord:btnTreeSearche" />
     
     <p:toolbar id="toolbarTree" styleClass="without-spaces ui-grid-col-12">  
-        <p:toolbarGroup styleClass="without-spaces ui-grid-col-12" rendered="#{explorerBean.tree != null}">
+        <p:toolbarGroup styleClass="ui-grid-col-12" rendered="#{explorerBean.tree != null}">
             
                     <p:commandButton icon="ui-icon-refresh" title="#{bundle.Refresh}"
                                      style="font-size: 90%;"
