--- a/escom-bpm-web/src/main/webapp/view/partners/partner-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/partner-explorer.xhtml
@@ -1,6 +1,7 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"                
                 xmlns:p="http://primefaces.org/ui"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
                 template="/view/templ/templ-explorer.xhtml">
 
     <ui:param name="_detailBean" value="#{partnersBean}" />
@@ -29,12 +30,16 @@
         
     <!-- специфичные поля поиска -->
     <ui:define name="searche">
-        <p:outputLabel value="#{bundle.Code}"/>        
-        <p:inputText id="codeSearche" title="#{bundle.HelpSearcheContext}"
-                     styleClass="ui-grid-col-12"
-                     value="#{explorerBean.model.codeSearche}"
-                     onkeypress="keyPress();">
-        </p:inputText>
+        <p:outputLabel value="#{bundle.Code}"/>
+        <h:panelGroup styleClass="ui-grid-col-12">
+            <p:inputText id="codeSearche" title="#{bundle.HelpSearcheContext}" widgetVar="searchCode"
+                         styleClass="ui-grid-col-12"
+                         value="#{explorerBean.model.codeSearche}"
+                         onkeypress="keyPress();">
+            </p:inputText>
+            <p:commandButton styleClass="btnClear" icon="ui-icon-close" onclick="PF('searchCode').jq.val('');"/>
+            <p:watermark for="codeSearche" value="#{bundle.InputCreteriaForSearche}" />
+        </h:panelGroup>
     </ui:define>
         
 </ui:composition>
