--- a/escom-bpm-web/src/main/webapp/view/staffs/staff-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/staff-explorer.xhtml
@@ -1,6 +1,7 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
                 template="/view/templ/templ-explorer.xhtml">
 
     <!-- стандарный обозреватель/селектор для Штатных единиц -->
@@ -50,19 +51,28 @@
     </ui:define>
         
     <!-- специфичные поля поиска -->
-    <ui:define name="searche">       
-        <p:outputLabel value="#{bundle.Post}"/>        
-        <p:inputText title="#{bundle.HelpSearcheContext}"
-                     styleClass="ui-grid-col-12"
-                     value="#{explorerBean.model.postSearche}"
-                     onkeypress="keyPress();">
-        </p:inputText>
-        <p:outputLabel value="#{bundle.SecondName}"/>        
-        <p:inputText title="#{bundle.HelpSearcheContext}"
-                     styleClass="ui-grid-col-12"
-                     value="#{explorerBean.model.secondNameSearche}"
-                     onkeypress="keyPress();">
-        </p:inputText>
+    <ui:define name="searche">
+        <p:outputLabel value="#{bundle.Post}"/>
+        <h:panelGroup styleClass="ui-grid-col-12">
+            <p:inputText title="#{bundle.HelpSearcheContext}" id="searchPost" widgetVar="searchPost"
+                         styleClass="ui-grid-col-10"
+                         value="#{explorerBean.model.postSearche}"
+                         onkeypress="keyPress();">
+            </p:inputText>
+            <p:commandButton styleClass="btnClear" icon="ui-icon-close" onclick="PF('searchPost').jq.val('');"/>
+            <p:watermark for="searchPost" value="#{bundle.InputCreteriaForSearche}" />
+        </h:panelGroup>
+
+        <p:outputLabel value="#{bundle.SecondName}"/>
+        <h:panelGroup styleClass="ui-grid-col-12">
+            <p:inputText title="#{bundle.HelpSearcheContext}" id="searchSecondName" widgetVar="searchSecondName"
+                         styleClass="ui-grid-col-10"
+                         value="#{explorerBean.model.secondNameSearche}"
+                         onkeypress="keyPress();">
+            </p:inputText>
+            <p:commandButton styleClass="btnClear" icon="ui-icon-close" onclick="PF('searchSecondName').jq.val('');"/>
+            <p:watermark for="searchSecondName" value="#{bundle.InputCreteriaForSearche}" />
+        </h:panelGroup>
     </ui:define>
     
 </ui:composition>
